@@ -141,9 +141,10 @@ protected:
 	
 	/*
 	 * The scroll bar depend on the size of the waveform widget.
-	 * This callback is connected to the signal "configure".
+	 * This callback is connected to the signal "configure" of the waveform frame (Gtk::Frame).
+	 * Every time this size changed, the scrollbar need to be recalculate.
 	 */
-	bool on_configure_event_waveform(GdkEventConfigure *ev);
+	bool on_configure_event_frame_waveform(GdkEventConfigure *ev);
 
 	/*
 	 * Edit the position of the current subtitle.
