@@ -1,5 +1,12 @@
 2008-03-18  kitone  <kitone@gna.org>
 
+	* src/actions/WaveformEditor.cc:
+	* src/actions/WaveformEditor.h:
+	The signal "configure" is now connected on the waveform frame.
+	Now, it doesn't interfere with the renderer.
+
+2008-03-18  kitone  <kitone@gna.org>
+
 	* src/actions/WaveformRenderer.cc:
 	* src/actions/WaveformRenderer.h:
 	Add virtual function waveform_changed.
